<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_aide"
        android:icon="@drawable/ic_action_aide"
        android:showAsAction="ifRoom"
        android:title="@string/menu_aide"/>
    
    <item
        android:id="@+id/menu_rafraichir"
        android:icon="@drawable/ic_action_rafraichir"
        android:showAsAction="ifRoom"
        android:title="@string/menu_rafraichir"/>
    
    
    <item
        android:id="@+id/menu_apropos"
        android:showAsAction="never"
        android:title="@string/menu_apropos"/>
    
    
    <item
        android:id="@+id/menu_paramètres"
        android:showAsAction="never"
        android:title="@string/menu_paramètres"/>

    <item
        android:id="@+id/menu_quitter"
        android:showAsAction="never"
        android:title="@string/menu_quitter"/>
    
</menu>