<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/metier_nom_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
            android:text="@string/nom_metier_1"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/metier_desc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metier_nom_1"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_metier_1" />
        
        <TextView
            android:id="@+id/metier_nom_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/metier_desc_1"
        	android:layout_marginTop="10dp"
            android:text="@string/nom_metier_2"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/metier_desc_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metier_nom_2"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_metier_2" />
        
        <TextView
            android:id="@+id/metier_nom_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/metier_desc_2"
        	android:layout_marginTop="10dp"
            android:text="@string/nom_metier_3"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/metier_desc_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metier_nom_3"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_metier_3" />
        
        <TextView
            android:id="@+id/metier_nom_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/metier_desc_3"
        	android:layout_marginTop="10dp"
            android:text="@string/nom_metier_4"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/metier_desc_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metier_nom_4"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_metier_4" />
        
        <TextView
            android:id="@+id/metier_nom_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/metier_desc_4"
        	android:layout_marginTop="10dp"
            android:text="@string/nom_metier_5"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/metier_desc_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metier_nom_5"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_metier_5" />
        
        <TextView
            android:id="@+id/metier_nom_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/metier_desc_5"
        	android:layout_marginTop="10dp"
            android:text="@string/nom_metier_6"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/metier_desc_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metier_nom_6"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_metier_6" />
        
    </RelativeLayout>

</ScrollView>