<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/programme_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
            android:text="@string/programme_1"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/desc_programme_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/programme_1"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_programme_1" />
        
        <TextView
            android:id="@+id/programme_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/desc_programme_1"
        	android:layout_marginTop="10dp"
            android:text="@string/programme_2"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/desc_programme_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/programme_2"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_programme_2" />
        
        <TextView
            android:id="@+id/programme_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_below="@+id/desc_programme_2"
        	android:layout_marginTop="10dp"
            android:text="@string/programme_3"
            android:textStyle="bold"
            android:textColor="@color/rouge" />
        <TextView
            android:id="@+id/desc_programme_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/programme_3"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_programme_3" />
    </RelativeLayout>

</ScrollView>