<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<RelativeLayout
	    android:id="@+id/ong_metier"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/metier_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_metier_1"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/metier_nom"
            android:text="@string/sep"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/metier_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/metier_nom"
            android:layout_marginLeft="20dp"
            android:text="@string/desc_metier_1" />
        
    </RelativeLayout>

</ScrollView>